2022-10-11T08:36:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3225337378
* notice: last 14d: unq all: 5 26
* notice: prev accum: outdated-unq outdated-all / unq all: 350 546 / 366 571
* notice: next accum: outdated-unq outdated-all / unq all: 350 546 / 367 572
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-11]

2022-10-11T02:28:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3223700609
* notice: last 14d: unq all: 5 25
* notice: prev accum: outdated-unq outdated-all / unq all: 350 546 / 366 572
* notice: next accum: outdated-unq outdated-all / unq all: 350 546 / 366 571
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-27]

2022-10-10T16:39:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3220955294
* notice: last 14d: unq all: 5 26
* notice: prev accum: outdated-unq outdated-all / unq all: 350 546 / 366 571
* notice: next accum: outdated-unq outdated-all / unq all: 350 546 / 366 572
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-10]

2022-10-10T08:38:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217935823
* notice: last 14d: unq all: 5 25
* notice: prev accum: outdated-unq outdated-all / unq all: 348 544 / 365 570
* notice: next accum: outdated-unq outdated-all / unq all: 350 546 / 366 571
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-26] / [2022-10-10]

2022-10-10T02:33:10Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3216517389