@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-11T08:36:34Z",
+  "timestamp" : "2022-10-11T16:39:29Z",
   "count_outdated" : 546,
   "uniques_outdated" : 350,
-  "count" : 572,
+  "count" : 573,
   "uniques" : 367,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-10-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
