@@ -1,3 +1,11 @@
+2022-10-11T16:39:29Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3228633359
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 350 546 / 367 572
+* notice: next accum: outdated-unq outdated-all / unq all: 350 546 / 367 573
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-11]
+
 2022-10-11T08:36:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3225337378
 * notice: last 14d: unq all: 5 26
